--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #6f4e37;
+    /* background-color: #6f4e37; */
     padding: 1rem 2rem;
     color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -35,6 +35,8 @@ body {
     border: none;
     font-size: 1rem;
     cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
 }
 
 
