--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    color: black;
     /* background-image: url('../public/images/bg.png');
     background-size: cover; */
 }
